--- a/docs/docs/asdf.mdx
+++ b/docs/docs/asdf.mdx
@@ -1,3 +1,5 @@
+import VersionControl from '..'
+
 # This is MDX
 
 aaaaa
@@ -8,6 +10,20 @@ Module
 Reloading
 
 ## Lets
+
+asdhfu
+ds hfuhdsauif dasf
+fausdhf udsf
+
+sadufhudsa fuihdsa f
+asdufhudsafa
+
+dsf hudsahfuiadsh fisa
+
+<VersionControl {{
+  "0.1.0": 'asdfadsf',
+  "0.2.23": "adsfasd"
+}}/>
 
 ### GO
 
